CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0...3.31.2)
# Copyright © 2024 to present UNKNOWN STRYKER. All Rights Reserved.
PROJECT(FE.HeaderTool
        VERSION 0.0
        DESCRIPTION "Frogman Engine Header Tool is an executable in-house tool application."
        LANGUAGES CXX)

GET_FILENAME_COMPONENT(FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR ${CMAKE_CURRENT_LIST_DIR} ABSOLUTE)
INCLUDE("${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../../CMake/predefined-settings.cmake")
INCLUDE("${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../../CMake/frogman-engine.cmake")

INCLUDE_DIRECTORIES(${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../../Third-Party/Tools/X86-64/Google-Test/include)
INCLUDE_DIRECTORIES(${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../../Third-Party/Tools/X86-64/Benchmark/include)




ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../Source/main.cpp
)

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${FE_HEADER_TOOL_CMAKE_CURRENT_LIST_DIR}/../Binaries")
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${BOOST_STACKTRACE} ${BOOST_CHRONO} ${BOOST_THREAD} ${FE_CORE} ${FE_FRAMEWORK})